--- a/index.html
+++ b/index.html
@@ -17,12 +17,20 @@
 
     <div id="list">
       <h2>My Todos</h2>
-      <ul id="tasks">
-      </ul>
+      <table id="tasks">
+        <thead>
+          <tr>
+            <th>Description</th>
+            <th>Priority</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
     </div>
 
     <script src="./src/index.js"></script>
   </div>
-
 </body>
 </html>
